--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,22 +1,23 @@
 basic_settings:
-  site_title: Made
+  site_title: UCSB Archives, Memory, and Preservation Lab
   favicon_image: /images/favicon.png
 
 header_settings:
-  logo_image: 
-  logo_width: 100
+  logo_image: /images/ampl.png
+  logo_width: 500
 
 menu_settings:
   menu_items:
     - title: 'Projects'
       url: '/'
-    - title: 'Blog'
+    - title: 'People'
       url: '/blog/'
+
 
 footer_settings:
   logo_image: 
   logo_width: 100
-  tagline: A beautiful, minimal portfolio Jekyll theme
+  tagline:
 
 hero_settings:
   background_image: /images/backgrounds/background-hero.svg
@@ -66,15 +67,16 @@ color_settings:
   text_medium_color: '#6C7A89'
   text_light_color: '#AEB3BB'
   accent_color: '#4C60E6'
+  # accent_color: '#A5469A'
   border_color: '#ECEDEF'
   error_color: '#D64541'
 
 font_settings:
-  font_embed: '<link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700|Ubuntu+Mono:400,700" rel="stylesheet">'
-  title_font: 'Rubik, sans-serif'
+  font_embed: '<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:wght@100..900|Ubuntu+Mono:400,700" rel="stylesheet">'
+  title_font: 'Roboto Slab, serif'
   body_font: '"Ubuntu Mono", sans-serif'
-  regular_weight: 400
-  bold_weight: 700
+  regular_weight: 100
+  bold_weight: 600
   site_title:
     small_size: 30
     medium_size: 40
@@ -133,14 +135,14 @@ font_settings:
     letter_spacing: 0
     line_height: 1.6
   subtitle:
-    size: 22
-    size_small: 20
+    size: 20
+    size_small: 18
     weight_regular: 400
     weight_heavy: 500
     letter_spacing: 0.16
     letter_spacing_small: 0.2
-    line_height: 32
-    line_height_small: 28
+    line_height: 28
+    line_height_small: 26
   p:
     size: 18
     size_small: 17
