--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: UCSB Archives, Memory, and Preservation Lab
+  site_title: Archives, Memory, and Preservation Lab
   favicon_image: /images/favicon.png
 
 header_settings:
