--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,8 +3,7 @@ basic_settings:
   favicon_image: /images/favicon.png
 
 header_settings:
-  logo_image: /images/ampl.png
-  logo_width: 500
+  logo_image: /images/ampl-cropped.png
 
 menu_settings:
   menu_items:
