--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,7 +21,7 @@ footer_settings:
   tagline:
 
 hero_settings:
-  background_image: /images/backgrounds/background-hero-blue.svg
+  background_image: /images/backgrounds/background-hero-orange.svg
 
 post_settings:
   grid_spacing: 10
@@ -67,8 +67,8 @@ color_settings:
   text_dark_color: '#202224'
   text_medium_color: '#6C7A89'
   text_light_color: '#AEB3BB'
-  accent_color: '#4C60E6'
-  # accent_color: '#A5469A'
+  # accent_color: '#EF5645'
+  accent_color: '#EF5645'
   border_color: '#ECEDEF'
   error_color: '#D64541'
 
