Revert "Made everything orange"
This reverts commit df1823f843c16de29b385c3bb9c2421506e1ee1c.

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,7 +21,7 @@ footer_settings:
   tagline:
 
 hero_settings:
-  background_image: /images/backgrounds/background-hero-orange.svg
+  background_image: /images/backgrounds/background-hero-purple.svg
 
 post_settings:
   grid_spacing: 10
@@ -67,7 +67,7 @@ color_settings:
   text_dark_color: '#202224'
   text_medium_color: '#6C7A89'
   text_light_color: '#AEB3BB'
-  accent_color: '#EF5645'
+  accent_color: '#A5469A'
   border_color: '#ECEDEF'
   error_color: '#D64541'
 
