--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -73,10 +73,10 @@ color_settings:
 
 font_settings:
   font_embed: '<link href="https://fonts.googleapis.com/css?family=Silkscreen:wght@400|Roboto+Slab:wght@100..900|Ubuntu+Mono:400,700" rel="stylesheet">'
-  title_font: 'Roboto Slab, serif'
+  title_font: 'Produkt, serif'
   display_font: 'Silkscreen, serif'
   body_font: '"Ubuntu Mono", sans-serif'
-  regular_weight: 100
+  regular_weight: 200
   bold_weight: 600
   site_title:
     small_size: 30
