--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -26,41 +26,6 @@ hero_settings:
 post_settings:
   grid_spacing: 10
 
-contact_settings:
-  email_address: ''
-  form_action: 'https://formspree.io/hello@jekyllthemes.io'
-  confirmation_url: '/thanks'
-  email_subject: 'Contact form submission'
-  send_button_text: 'Get in Touch'
-
-social_settings:
-  facebook_url: ''
-  twitter_url: ''
-  instagram_url: ''
-  snapchat_url: ''
-  youtube_url: ''
-  google-plus_url: ''
-  vimeo_url: ''
-  pinterest_url: ''
-  medium_url: ''
-  quora_url: ''
-  amazon_url: ''
-  apple_url: ''
-  android_url: ''
-  tumblr_url: ''
-  dribbble_url: ''
-  behance_url: ''
-  deviantart_url: ''
-  github_url: ''
-  reddit_url: ''
-  flickr_url: ''
-  etsy_url: ''
-  kickstarter_url: ''
-  soundcloud_url: ''
-  spotify_url: ''
-  bandcamp_url: ''
-  linkedin_url: ''
-
 color_settings:
   background_color: '#ffffff'
   background_alt_color: '#f4f5f6'
@@ -74,7 +39,7 @@ color_settings:
 font_settings:
   font_embed: '<link href="https://fonts.googleapis.com/css?family=Silkscreen:wght@400|Roboto+Slab:wght@100..900|Ubuntu+Mono:400,700" rel="stylesheet">'
   title_font: 'Produkt, serif'
-  display_font: 'Silkscreen, serif'
+  display_font: 'Silkscreen, sans-serif'
   body_font: '"Ubuntu Mono", sans-serif'
   regular_weight: 200
   bold_weight: 600
